images are handled

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>First Http reply</h1>
 
-<p>My first paragraph.</p>
-<a href="/simp.png">show mark philip</a>
-Try it Yourself »
-lkjlkjlkjlk;jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj
+<p>wohoooooo!!!</p>
+<a href="/mark.jpeg">show mark philip picture</a>
+
+
+<div>
+<img src="/simp.png">
+</div>
 
 </body>
 </html>
